--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <span>Teste v02, Alterado! </span>
+    <span style="color: #fff; border: 2px solid #00f; padding: 12px; font-weight: 700;">Teste v03, Adicionado estilos in-line ! </span>
     
 </body>
 </html>
